Add exception handling for REST API
Fixed exception classes and developed a GlobalExceptionHandler, added in every microservice
